--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "usehooks-ts": "^2.9.1",
